add digit boolean type

--- a/src/resources/documentation/Форматы_данных.md
+++ b/src/resources/documentation/Форматы_данных.md
@@ -1,13 +1,14 @@
-| Тип            | Допустимый диапазон значений                               | Описание                            | Значение по умолчанию |
-|----------------|------------------------------------------------------------|-------------------------------------|-----------------------|
-| boolean        | true или false                                             | Логический тип данных               | false                 |
-| char           | от '\u0000' до '\uffff'                                    | Символьный тип данных               | '\u0000'              |
-| byte           | от -128 до 127                                             | 8-битное знаковое целое число       | 0                     |
-| short          | от -32,768 до 32,767                                       | 16-битное знаковое целое число      | 0                     |
-| int            | от -2,147,483,648 до 2,147,483,647                         | 32-битное знаковое целое число      | 0                     |
-| long           | от -9,223,372,036,854,775,808 до 9,223,372,036,854,775,807 | 64-битное знаковое целое число      | 0L                    |
-| float          | от 3.4e-038 до 3.4e+038                                    | 32-битное число с плавающей запятой | 0.0f                  |
-| double         | от 1.7е-308 до 1.7e+308                                    | 64-битное число с плавающей запятой | 0.0d                  |
-| String         | Строка, неограниченного числа символов                     | Строка, последовательность символов | ""                    |
-| Limited_String | Строка, от 0 до 255 символов                               | Строка, последовательность символов | ""                    |
-| Type_String    | Строка, от 0 до 4 символов                                 | Строка, последовательность символов | ""                    |
+| Тип             | Допустимый диапазон значений                               | Описание                            | Значение по умолчанию |
+|-----------------|------------------------------------------------------------|-------------------------------------|-----------------------|
+| boolean         | true или false                                             | Логический тип данных               | false                 |
+| char            | от '\u0000' до '\uffff'                                    | Символьный тип данных               | '\u0000'              |
+| byte            | от -128 до 127                                             | 8-битное знаковое целое число       | 0                     |
+| short           | от -32,768 до 32,767                                       | 16-битное знаковое целое число      | 0                     |
+| int             | от -2,147,483,648 до 2,147,483,647                         | 32-битное знаковое целое число      | 0                     |
+| long            | от -9,223,372,036,854,775,808 до 9,223,372,036,854,775,807 | 64-битное знаковое целое число      | 0L                    |
+| float           | от 3.4e-038 до 3.4e+038                                    | 32-битное число с плавающей запятой | 0.0f                  |
+| double          | от 1.7е-308 до 1.7e+308                                    | 64-битное число с плавающей запятой | 0.0d                  |
+| String          | Строка, неограниченного числа символов                     | Строка, последовательность символов | ""                    |
+| Limited_String  | Строка, от 0 до 255 символов                               | Строка, последовательность символов | ""                    |
+| Type_String     | Строка, от 0 до 4 символов                                 | Строка, последовательность символов | ""                    |
+| digit_boolean   | Число от 0 до 1                                            | Число, 1-битное                     | 0                     |     
